Fixed navigation on smaller screens

--- a/static/core.css
+++ b/static/core.css
@@ -145,6 +145,9 @@ span.timegraphannota {margin-left: 10px; font-size: 0.9em;}
    .breadcrumbs {font-size: 0.9em;}
    .issuelistingtable .issCreated {display: none;}
    #isstimelogged .timegraph {margin-left: 20px;}
+  .nbpg {display:none}
+  .pgSlc {display:none}
+
 }
 
 
